Add cameras index switch button (from front to back camera)

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,4 +19,4 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
-opencvsdk=C\:\\SabreDeveloper\\StudioProjects\\opencv-4.3.0-android-sdk\\OpenCV-android-sdk
+opencvsdk=opencv-4.3.0-android-sdk/OpenCV-android-sdk
