--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
             cmake {
                 cppFlags "-frtti -fexceptions"
                 abiFilters 'x86', 'x86_64', 'armeabi-v7a', 'arm64-v8a'
-                arguments "-DOpenCV_DIR=" + opencvsdk + "/sdk/native"
+                arguments "-DOpenCV_DIR=" + new File(opencvsdk).absolutePath + "/sdk/native"
             }
         }
 
