--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,12 @@ android {
 
     }
 
+
+    lintOptions {
+        // checkReleaseBuilds false
+        abortOnError false
+    }
+
     buildTypes {
         release {
             minifyEnabled false
